2008-10-13  Timothy Hatcher  <timothy@apple.com>

        Make prepare-ChangeLog populate the changed functions for JavaScript files.

        https://bugs.webkit.org/show_bug.cgi?id=21567

        Reviewed by David Kilzer.

        * Scripts/prepare-ChangeLog:
        (get_function_line_ranges): Call get_function_line_ranges_for_javascript for
        files that end with ".js".
        (get_function_line_ranges_for_javascript): Find functions, anonymous functions
        and getters/setters.

2008-10-14  Alp Toker  <alp@nuanti.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=16299
        Add a config.h file to DRT

        Add a config.h to DumpRenderTree and reduce use of DumpRenderTree.h as
        an ad-hoc config header.

        * DumpRenderTree/AccessibilityController.cpp:
        * DumpRenderTree/AccessibilityUIElement.cpp:
        * DumpRenderTree/AccessibilityUIElement.h:
        * DumpRenderTree/DumpRenderTree.h:
        * DumpRenderTree/GCController.cpp:
        * DumpRenderTree/LayoutTestController.cpp:
        * DumpRenderTree/WorkQueue.cpp:
        * DumpRenderTree/config.h: Added.
        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        * DumpRenderTree/gtk/GCControllerGtk.cpp:
        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        * DumpRenderTree/gtk/WorkQueueItemGtk.cpp:
        * DumpRenderTree/win/AccessibilityControllerWin.cpp:
        * DumpRenderTree/win/AccessibilityUIElementWin.cpp:
        * DumpRenderTree/win/DumpRenderTree.cpp:
        * DumpRenderTree/win/DumpRenderTreeWin.h:
        * DumpRenderTree/win/EditingDelegate.cpp:
        * DumpRenderTree/win/EventSender.cpp:
        * DumpRenderTree/win/FrameLoadDelegate.cpp:
        * DumpRenderTree/win/GCControllerWin.cpp:
        * DumpRenderTree/win/MD5.cpp:
        * DumpRenderTree/win/PixelDumpSupportWin.cpp:
        * DumpRenderTree/win/PolicyDelegate.cpp:
        * DumpRenderTree/win/ResourceLoadDelegate.cpp: