@@ -29,22 +29,6 @@
 #ifndef DumpRenderTreeWin_h
 #define DumpRenderTreeWin_h
 
-#undef _WIN32_WINNT
-#define _WIN32_WINNT 0x0500
-
-#undef WINVER
-#define WINVER 0x0500
-
-// If we don't define these, they get defined in windef.h. 
-// We want to use std::min and std::max
-#undef max
-#define max max
-#undef min
-#define min min
-
-#undef _WINSOCKAPI_
-#define _WINSOCKAPI_ // Prevent inclusion of winsock.h in windows.h
-
 struct IWebFrame;
 struct IWebPolicyDelegate;
 struct IWebView;
